Added some grids and styling

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,7 +12,7 @@
     <div id="content">
 
     <header>
-        <a id="logo_link" href="index.html">
+        <a id="logo_link" class = "logo_link" href="index.html">
             <img class="logo" src="images/logo4_200.png" alt="Dry Oar Logo">
         </a>
         <nav>
@@ -58,9 +58,10 @@
             <a class="join" href="rivers.html">Join Us</a>
         </section>
 
-    </main>https/:
+    </main>
     <footer>
         <p>Dry Oar &copy; 2022 - Chris Jones</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
