added to the siteplan

--- a/Chimichanga/site-plan.html
+++ b/Chimichanga/site-plan.html
@@ -89,8 +89,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Gallery</a>
+        <a href="#">About</a>
       </nav>
       <hr>
       <h2>
@@ -101,10 +101,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Gallery <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          About  <!-- change this -->
         </div>
 
         <div class="top">
@@ -126,29 +126,55 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Hello, I’m Micah. I’m a digital artist and graphic designer with experience in clothing images, stickers, logos, custom characters, and more. I’m relatively new to the industry, and I’m looking for ways to expand my network and experiences in it. Please check out my gallery, where you can see some of my professional work, as well as some of the projects I’ve completed on my own time. If you like what you see and have a project you’d like me to work on, please reach out through email or social media. Also see my Instagram page to check out some of my more recent projects.
+
+        Why will your visitors come to your site instead of another to get this information or complete the actions?
+        The page will make it clear that Micah is still up and coming in the industry and is mostly looking for experience. Viewers will see it as an opportunity to get their designs made relatively inexpensively, while also helping out a new artist.
+
+        What questions will your visitors expect your site to answer for them?
+        Is Micah a skilled artist? Does he have experience with professional projects? What are his strengths and weaknesses? What kind of projects has he done in the past? Are his clients satisfied with his work? Can he follow through with projects? How to get in contact?
+
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="micah images/rockgym.png" alt="image for homepage">
+        <img src="micah images/skeleton.png" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Gallery</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Welcome to my gallery page. These are examples of some of the professional work I’ve done. With each project shown, I worked closely with the client in order to get the desired finished product. I’ve learned that careful and frequent communication is the key to creating excellent and effective professional work.
+
+        Here are some of my personal projects. I write my own graphic novels and will eventually have them published. 
+
+        What information is necessary to complete any actions your site offers?
+        Mostly pictures of projects from Micah’s portfolio. There can be a gallery page where his professional projects are shown, as well as some of the artwork he’s done on his own time. They will be clearly separtated so the users know what to expect from his professional work.
+
+        What types of activities will visitors want to complete on your site?
+        Visitors will want to see examples of Micah’s work. They will want to learn more about him. They will want to contact him in order to discuss prices. 
+
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for Gallery</p>
+        <img src="micah images/harrypotter.png" alt="image for gallery">
+        <img src="micah images/mico.png" alt="image for gallery">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Micah Jones
+        I’m a 19 year old digital artist, currently living in Hawaii. I enjoy rock climbing, surfing, and trying new things to get ideas for my graphic novels. I’ve been taking on professional projects for over a year and I can see myself making this into a very fulfilling career. I enjoy meeting new people and working closely with them to make their ideas a reality. In addition to graphic design, I have work experience as a rock climbing instructor, and as a trainer at Café Rio Mexican Grill. 
+
+        This page will emphasize Micah’s Instagram art account and try to direct people there because he regularly posts there. The amount of people that follow his page will further verify him as a legitimate artist. The user may decide to follow his Instagram page, which will allow them to have consistent interactions with Micah’s work.
+
+        Why will people come to your site?
+        People will come to the portfolio website to learn more about the legitimacy of Micah Jones as a graphic designer and digital artist. People involved in small online businesses often need a graphic designer to produce images for their brand. This site will allow them to see if Micah will be a good artist for their projects
+
+
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the About</p>
+        <img src="micah images/birdman.png" alt="image for page3">
+        <img src="micah images/flower.png" alt="image for page3">
+      
 
       </ul>
       <hr>
