changed some text

--- a/Chimichanga/site-plan.html
+++ b/Chimichanga/site-plan.html
@@ -63,11 +63,12 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Oswald
+        <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
-      </h4>
+        Paragraph Font: Source Sans Pro
+        <!-- change this -->
       <h3>
         Normal paragraph example
       </h3>
@@ -127,7 +128,7 @@
       <h3>Home page</h3>
       <p>
         Hello, I’m Micah. I’m a digital artist and graphic designer with experience in clothing images, stickers, logos, custom characters, and more. I’m relatively new to the industry, and I’m looking for ways to expand my network and experiences in it. Please check out my gallery, where you can see some of my professional work, as well as some of the projects I’ve completed on my own time. If you like what you see and have a project you’d like me to work on, please reach out through email or social media. Also see my Instagram page to check out some of my more recent projects.
-
+        
         Why will your visitors come to your site instead of another to get this information or complete the actions?
         The page will make it clear that Micah is still up and coming in the industry and is mostly looking for experience. Viewers will see it as an opportunity to get their designs made relatively inexpensively, while also helping out a new artist.
 
