--- a/Chimichanga/site-plan.html
+++ b/Chimichanga/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img class=logo_font src="#" alt="Chimichanga Studios">
+      <img class=image class=logo_font src="micah images/croppedLogo.png" alt="Chimichanga Studios">
       <hr>
       <h2>
         Style Guide
@@ -46,13 +46,13 @@
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
       <p>Palette URL:</p>
-    <a href="https://coolors.co/5f8172-a4c3b2-cce3de-eaf4f4-f6fff8"
-      target="_blank">https://coolors.co/5f8172-a4c3b2-cce3de-eaf4f4-f6fff8</a>
+    <a href="https://coolors.co/9b5de5-f15bb5-ff9940-00bbf9-00f5a7"
+      target="_blank">https://coolors.co/9b5de5-f15bb5-ff9940-00bbf9-00f5a7</a>
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#00BBF9]</td><td class="secondary">[#00F5A7]</td><td class="accent1">[#9B5DE5]</td><td class="accent2">[#FF9940]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -138,8 +138,8 @@
 
       </p>
       <p>Images for the Home page</p>
-        <img src="micah images/rockgym.png" alt="image for homepage">
-        <img src="micah images/skeleton.png" alt="image for homepage">
+        <img class=image src="micah images/rockgym.png" alt="image for homepage">
+        <img class=image src="micah images/skeleton.png" alt="image for homepage">
 
       </ul>
       <h3>Gallery</h3>
@@ -156,8 +156,8 @@
 
       </p>
       <p>Images for Gallery</p>
-        <img src="micah images/harrypotter.png" alt="image for gallery">
-        <img src="micah images/mico.png" alt="image for gallery">
+        <img class=image src="micah images/harrypotter.png" alt="image for gallery">
+        <img class=image src="micah images/mico.png" alt="image for gallery">
 
       </ul>
       <h3>About</h3>
@@ -173,8 +173,8 @@
 
       </p>
       <p>Images for the About</p>
-        <img src="micah images/birdman.png" alt="image for page3">
-        <img src="micah images/flower.png" alt="image for page3">
+        <img class=image src="micah images/birdman.png" alt="image for page3">
+        <img class=image src="micah images/flower.png" alt="image for page3">
       
 
       </ul>
