--- a/wwr/index.html
+++ b/wwr/index.html
@@ -17,7 +17,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">page 2</a>
+            <a href="faq.html">FAQ</a>
             <a href="site-plan-rafting.html">site plan</a>
             <a href="contactus.html">contact us</a>
         </nav>
