--- a/Chimichanga/site-plan.html
+++ b/Chimichanga/site-plan.html
@@ -52,7 +52,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#00BBF9]</td><td class="secondary">[#00F5A7]</td><td class="accent1">[#9B5DE5]</td><td class="accent2">[#FF9940]</td></tr>
+        <tr><td class="primary">#00BBF9</td><td class="secondary">#00F5A7</td><td class="accent1">#9B5DE5</td><td class="accent2">#FF9940</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -102,7 +102,7 @@
           Home
         </div>
         <div class="sm-page2">
-          Gallery <!-- change this -->
+          Client Pojects <!-- change this -->
         </div>
         <div class="sm-page3">
           About  <!-- change this -->
@@ -187,21 +187,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The home page will introduce the viewer to the site and display some of Micah's personal projects.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="micah images/chimichanga home page.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Client</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The client page will display some of Micah's professional work.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="micah images/chimichanga client.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>About</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        The about page will display a photo of Micah and have a description of him and his experience in the field. It will also provide his contact information.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="micah images/Chimichanga about.png" alt="page 3 wireframe">
     </main>
   </body>
 
