fixed some bugs

--- a/Chimichanga/site-plan.html
+++ b/Chimichanga/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img class=image class=logo_font src="micah images/croppedLogo.png" alt="Chimichanga Studios">
+      <img class=image class=logo_font src="micah-images/croppedLogo.png" alt="Chimichanga Studios">
       <hr>
       <h2>
         Style Guide
@@ -138,8 +138,8 @@
 
       </p>
       <p>Images for the Home page</p>
-        <img class=image src="micah images/rockgym.png" alt="image for homepage">
-        <img class=image src="micah images/skeleton.png" alt="image for homepage">
+        <img class=image src="micah-images/rockgym.png" alt="image for homepage">
+        <img class=image src="micah-images/skeleton.png" alt="image for homepage">
 
       </ul>
       <h3>Gallery</h3>
@@ -156,8 +156,8 @@
 
       </p>
       <p>Images for Gallery</p>
-        <img class=image src="micah images/harrypotter.png" alt="image for gallery">
-        <img class=image src="micah images/mico.png" alt="image for gallery">
+        <img class=image src="micah-images/harrypotter.png" alt="image for gallery">
+        <img class=image src="micah-images/mico.png" alt="image for gallery">
 
       </ul>
       <h3>About</h3>
@@ -173,8 +173,8 @@
 
       </p>
       <p>Images for the About</p>
-        <img class=image src="micah images/birdman.png" alt="image for page3">
-        <img class=image src="micah images/flower.png" alt="image for page3">
+        <img class=image src="micah-images/birdman.png" alt="image for page3">
+        <img class=image src="micah-images/flower.png" alt="image for page3">
       
 
       </ul>
@@ -189,19 +189,19 @@
       <p>         
         The home page will introduce the viewer to the site and display some of Micah's personal projects.
       </p>
-      <img src="micah images/chimichanga home page.png" alt="home page wireframe">
+      <img src="micah-images/chimichanga home page.png" alt="home page wireframe">
 
       <h3>Client</h3>
       <p>         
         The client page will display some of Micah's professional work.
       </p>
-      <img src="micah images/chimichanga client.png" alt="page 2 wireframe">
+      <img src="micah-images/chimichanga client.png" alt="page 2 wireframe">
 
       <h3>About</h3>
       <p>         
         The about page will display a photo of Micah and have a description of him and his experience in the field. It will also provide his contact information.
       </p>
-      <img src="micah images/Chimichanga about.png" alt="page 3 wireframe">
+      <img src="micah-images/Chimichanga about.png" alt="page 3 wireframe">
     </main>
   </body>
 
