--- a/Chimichanga/client.html
+++ b/Chimichanga/client.html
@@ -12,7 +12,7 @@
     
     <header>
         <a id="logo_link" class="logo_link" class="image" href="index.html">
-            <img class="logo" src="micah images/croppedLogo.png" alt="Chimichanga Logo">
+            <img class="logo" src="micah-images/croppedLogo.png" alt="Chimichanga Logo">
         </a>
         <nav>
 
@@ -35,67 +35,67 @@
     <main>
 
         <section>
-            <img class="client_img" src="micah images/rockgym.png" alt="Rock Gym">
+            <img class="client_img" src="micah-images/rockgym.png" alt="Rock Gym">
         </section>
         <section>
-            <img class="client_img" src="micah images/worldlocal.png" alt="world local">
+            <img class="client_img" src="micah-images/worldlocal.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client10.png" alt="world local">
+            <img class="client_img" src="micah-images/client10.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client13.png" alt="world local">
+            <img class="client_img" src="micah-images/client13.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client14.png" alt="world local">
+            <img class="client_img" src="micah-images/client14.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client12.png" alt="world local">
+            <img class="client_img" src="micah-images/client12.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/skeleton.png" alt="world local">
+            <img class="client_img" src="micah-images/skeleton.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/worldlocal2.png" alt="world local">
+            <img class="client_img" src="micah-images/worldlocal2.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/flower.png" alt="world local">
+            <img class="client_img" src="micah-images/flower.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client7.png" alt="world local">
+            <img class="client_img" src="micah-images/client7.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/harrypotter.png" alt="world local">
+            <img class="client_img" src="micah-images/harrypotter.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client16.png" alt="world local">
+            <img class="client_img" src="micah-images/client16.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client1.png" alt="world local">
+            <img class="client_img" src="micah-images/client1.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client4.png" alt="world local">
+            <img class="client_img" src="micah-images/client4.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/strangerthings.png" alt="world local">
+            <img class="client_img" src="micah-images/strangerthings.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client8.png" alt="world local">
+            <img class="client_img" src="micah-images/client8.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client3.png" alt="world local">
+            <img class="client_img" src="micah-images/client3.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client9.png" alt="world local">
+            <img class="client_img" src="micah-images/client9.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client5.png" alt="world local">
+            <img class="client_img" src="micah-images/client5.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client6.png" alt="world local">
+            <img class="client_img" src="micah-images/client6.png" alt="world local">
         </section>
         <section>
-            <img class="client_img" src="micah images/client11.png" alt="world local">
+            <img class="client_img" src="micah-images/client11.png" alt="world local">
         </section>
         
 
@@ -110,7 +110,7 @@
         <p><a href="about.html">About/Contact</a></p>
         <div class="social">
             <a href="https://instagram.com" target="_blank">
-                <img src="micah images/instagram.png" alt="instagram icon">
+                <img src="micah-images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer> 
