fixed some bugs

--- a/Chimichanga/client.html
+++ b/Chimichanga/client.html
@@ -37,82 +37,82 @@
 
     <main class="client-grid">
 
-        <section id="left-spacer">
+        <div id="left-spacer">
             
-        </section>
+        </div>
 
         <div id="left-side">
-            <section>
+            <div>
                 <img src="micah-images/rockgym.png" alt="Rock Gym">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img  src="micah-images/client10.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img  src="micah-images/client13.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img  src="micah-images/client14.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client12.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/skeleton.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/worldlocal2.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/flower.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client7.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/worldlocal.png" alt="world local">
-            </section>
+            </div>
 
         </div>
 
-        <section id="right-spacer">
+        <div id="right-spacer">
             
-        </section>
+        </div>
 
         <div id="right-side">
-            <section>
+            <div>
                 <img src="micah-images/harrypotter.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client16.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client1.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client4.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/strangerthings.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client8.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client3.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client9.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client5.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client6.png" alt="world local">
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="micah-images/client11.png" alt="world local">
-            </section>
+            </div>
         </div>
 
 
@@ -130,6 +130,6 @@
             </a>
         </div>
     </footer> 
-
+    </div>
 </body>
 </html>
