fixed some bugs

--- a/Chimichanga/about.html
+++ b/Chimichanga/about.html
@@ -43,7 +43,7 @@
 
         <div id="description">
             <P>
-                Micah Jones is a freelance graphic designer and digital artist. He currently lives in Hawaii where he spends his time rock climbing, surfing, and searching for ideas for his graphic novel. He loves his work and works closely with client to bring their ideas to life.
+                Micah Jones is a freelance graphic designer and digital artist. He currently lives in Hawaii where he spends his time rock climbing, surfing, and searching for ideas for his graphic novel. He loves his work and works closely with client to bring their ideas to life. Contact him at jonesmicah962@gmail.com. Also view his work on Instagram at Chimichanga Studios.
             </P>
              <!--<form action="#" method="post">
                 <ul>
@@ -64,7 +64,7 @@
         </div>
 
         
-
+    </div>
 
     </main>
 
